Test classes -- removes mocks returning null and uses List.of/Set.of